# musculo-atlas

./: .gitignore  LICENSE  README.md  biome.json  docker-compose.yml  package.json  pnpm-lock.yaml
.github/workflows/: ci-backend.yml  ci-frontend.yml  ci-rust.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/src/ma_api/: __init__.py  main.py
apps/api/src/ma_api/routers/: anatomy.py  proteins.py  search.py
apps/web/: package.json  tsconfig.json  vitest.config.ts
apps/web/public/models/body/: adult_body_lod0.gltf  adult_body_lod1.gltf  adult_body_lod2.gltf
apps/web/public/models/connective/: connective_tissue.gltf
apps/web/public/models/joints/: synovial_joints.gltf
apps/web/public/models/muscles/: major_groups.gltf  rectus_femoris.gltf
apps/web/public/models/regions/: anterior_thigh.gltf
apps/web/public/models/skeleton/: full_skeleton.gltf
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/data/: bones.json  connective.json  muscles.json  pdb_catalog.json  regions.json
apps/web/src/lib/: anatomicalFidelity.ts  atlasState.ts  connectiveTissue.ts  dimensions.ts  grossAnatomy.ts  hierarchy.ts  meshManifest.ts  microAnatomy.ts  molecular.ts  physiology.ts  production.ts  proteins.ts  sarcomere.ts  semanticZoom.ts  types.ts  zoom.ts
apps/web/test/: anatomical-fidelity.test.ts  phase1.test.ts  phase2.test.ts  phase3.test.ts  phase4.test.ts  phase5.test.ts  phase6.test.ts  phase7.test.ts
docs/: ARCHITECTURE.md  DIMENSIONS.md  HIERARCHY.md  PDB_CATALOG.md  PHYSIOLOGY.md  RENDERING.md  RESEARCH_REPORT.md
(+39 files in other folders)
